@@ -1,4 +1,4 @@
-## Interface: 50501, 50502
+## Interface: 50503
 ## Title: ala's Trade Skill
 ## Title-zhCN: ala商业技能助手
 ## Title-zhTW: ala商業技能助手
@@ -12,7 +12,7 @@
 ## Author: |cff00ff00ALA|r
 ## Author-zhCN: |cff00ff00ALA|r
 ## Author-zhTW: |cff00ff00ALA|r
-## Version: 505r.251205
+## Version: 505r.251220
 
 load.xml
 
